--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         font-size: 26px;
         color:#ff1010;
     }
-    .color-inputs {
+   .color-inputs {
       display: flex;
-      justify-content: center;
-      gap: 20px;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
       margin-bottom: 20px;
     }
     .result {
